[gd_scene load_steps=9 format=3 uid="uid://we2rho41b1dg"]

[ext_resource type="Texture2D" uid="uid://cimade2legwib" path="res://assets/kenney_pixel-shmup/Tilemap/tiles_packed.png" id="1_lkddg"]
[ext_resource type="Texture2D" uid="uid://lwxv0dtn6gej" path="res://assets/shmup_ext.png" id="2_umou2"]
[ext_resource type="Script" path="res://scripts/tile_map_gen.gd" id="3_bw0ur"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xf7lh"]
resource_name = "Environment"
texture = ExtResource("1_lkddg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/bottom_right_corner = 0
1:3/0/terrains_peering_bit/bottom_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/bottom_right_corner = 0
2:3/0/terrains_peering_bit/bottom_side = 0
2:3/0/terrains_peering_bit/bottom_left_corner = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/bottom_side = 0
3:3/0/terrains_peering_bit/bottom_left_corner = 0
3:3/0/terrains_peering_bit/left_side = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/bottom_side = 0
4:3/0/terrains_peering_bit/bottom_left_corner = 0
4:3/0/terrains_peering_bit/left_side = 0
4:3/0/terrains_peering_bit/top_left_corner = 0
4:3/0/terrains_peering_bit/top_side = 0
4:3/0/terrains_peering_bit/top_right_corner = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/bottom_right_corner = 0
5:3/0/terrains_peering_bit/bottom_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_left_corner = 0
5:3/0/terrains_peering_bit/top_side = 0
5:3/0/terrains_peering_bit/top_right_corner = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 2
7:3/0/terrains_peering_bit/right_side = 2
7:3/0/terrains_peering_bit/bottom_right_corner = 2
7:3/0/terrains_peering_bit/bottom_side = 2
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 2
8:3/0/terrains_peering_bit/right_side = 2
8:3/0/terrains_peering_bit/bottom_right_corner = 2
8:3/0/terrains_peering_bit/bottom_side = 2
8:3/0/terrains_peering_bit/bottom_left_corner = 2
8:3/0/terrains_peering_bit/left_side = 2
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/terrain = 2
9:3/0/terrains_peering_bit/bottom_side = 2
9:3/0/terrains_peering_bit/bottom_left_corner = 2
9:3/0/terrains_peering_bit/left_side = 2
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/terrain = 2
10:3/0/terrains_peering_bit/right_side = 2
10:3/0/terrains_peering_bit/bottom_side = 2
10:3/0/terrains_peering_bit/bottom_left_corner = 2
10:3/0/terrains_peering_bit/left_side = 2
10:3/0/terrains_peering_bit/top_left_corner = 2
10:3/0/terrains_peering_bit/top_side = 2
10:3/0/terrains_peering_bit/top_right_corner = 2
11:3/0 = 0
11:3/0/terrain_set = 0
11:3/0/terrain = 2
11:3/0/terrains_peering_bit/right_side = 2
11:3/0/terrains_peering_bit/bottom_right_corner = 2
11:3/0/terrains_peering_bit/bottom_side = 2
11:3/0/terrains_peering_bit/left_side = 2
11:3/0/terrains_peering_bit/top_left_corner = 2
11:3/0/terrains_peering_bit/top_side = 2
11:3/0/terrains_peering_bit/top_right_corner = 2
0:4/0 = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_right_corner = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/top_side = 0
1:4/0/terrains_peering_bit/top_right_corner = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/bottom_right_corner = 0
2:4/0/terrains_peering_bit/bottom_side = 0
2:4/0/terrains_peering_bit/bottom_left_corner = 0
2:4/0/terrains_peering_bit/left_side = 0
2:4/0/terrains_peering_bit/top_left_corner = 0
2:4/0/terrains_peering_bit/top_side = 0
2:4/0/terrains_peering_bit/top_right_corner = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/bottom_left_corner = 0
3:4/0/terrains_peering_bit/left_side = 0
3:4/0/terrains_peering_bit/top_left_corner = 0
3:4/0/terrains_peering_bit/top_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_right_corner = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/bottom_left_corner = 0
4:4/0/terrains_peering_bit/left_side = 0
4:4/0/terrains_peering_bit/top_left_corner = 0
4:4/0/terrains_peering_bit/top_side = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_right_corner = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/bottom_left_corner = 0
5:4/0/terrains_peering_bit/left_side = 0
5:4/0/terrains_peering_bit/top_side = 0
5:4/0/terrains_peering_bit/top_right_corner = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 2
7:4/0/terrains_peering_bit/right_side = 2
7:4/0/terrains_peering_bit/bottom_right_corner = 2
7:4/0/terrains_peering_bit/bottom_side = 2
7:4/0/terrains_peering_bit/top_side = 2
7:4/0/terrains_peering_bit/top_right_corner = 2
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 2
8:4/0/terrains_peering_bit/right_side = 2
8:4/0/terrains_peering_bit/bottom_right_corner = 2
8:4/0/terrains_peering_bit/bottom_side = 2
8:4/0/terrains_peering_bit/bottom_left_corner = 2
8:4/0/terrains_peering_bit/left_side = 2
8:4/0/terrains_peering_bit/top_left_corner = 2
8:4/0/terrains_peering_bit/top_side = 2
8:4/0/terrains_peering_bit/top_right_corner = 2
9:4/0 = 0
9:4/0/terrain_set = 0
9:4/0/terrain = 2
9:4/0/terrains_peering_bit/bottom_side = 2
9:4/0/terrains_peering_bit/bottom_left_corner = 2
9:4/0/terrains_peering_bit/left_side = 2
9:4/0/terrains_peering_bit/top_left_corner = 2
9:4/0/terrains_peering_bit/top_side = 2
10:4/0 = 0
10:4/0/terrain_set = 0
10:4/0/terrain = 2
10:4/0/terrains_peering_bit/right_side = 2
10:4/0/terrains_peering_bit/bottom_right_corner = 2
10:4/0/terrains_peering_bit/bottom_side = 2
10:4/0/terrains_peering_bit/bottom_left_corner = 2
10:4/0/terrains_peering_bit/left_side = 2
10:4/0/terrains_peering_bit/top_left_corner = 2
10:4/0/terrains_peering_bit/top_side = 2
11:4/0 = 0
11:4/0/terrain_set = 0
11:4/0/terrain = 2
11:4/0/terrains_peering_bit/right_side = 2
11:4/0/terrains_peering_bit/bottom_right_corner = 2
11:4/0/terrains_peering_bit/bottom_side = 2
11:4/0/terrains_peering_bit/bottom_left_corner = 2
11:4/0/terrains_peering_bit/left_side = 2
11:4/0/terrains_peering_bit/top_side = 2
11:4/0/terrains_peering_bit/top_right_corner = 2
0:5/0 = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/top_side = 0
1:5/0/terrains_peering_bit/top_right_corner = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/left_side = 0
2:5/0/terrains_peering_bit/top_left_corner = 0
2:5/0/terrains_peering_bit/top_side = 0
2:5/0/terrains_peering_bit/top_right_corner = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/terrains_peering_bit/left_side = 0
3:5/0/terrains_peering_bit/top_left_corner = 0
3:5/0/terrains_peering_bit/top_side = 0
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
7:5/0/terrain_set = 0
7:5/0/terrain = 2
7:5/0/terrains_peering_bit/right_side = 2
7:5/0/terrains_peering_bit/top_side = 2
7:5/0/terrains_peering_bit/top_right_corner = 2
8:5/0 = 0
8:5/0/terrain_set = 0
8:5/0/terrain = 2
8:5/0/terrains_peering_bit/right_side = 2
8:5/0/terrains_peering_bit/left_side = 2
8:5/0/terrains_peering_bit/top_left_corner = 2
8:5/0/terrains_peering_bit/top_side = 2
8:5/0/terrains_peering_bit/top_right_corner = 2
9:5/0 = 0
9:5/0/terrain_set = 0
9:5/0/terrain = 2
9:5/0/terrains_peering_bit/left_side = 2
9:5/0/terrains_peering_bit/top_left_corner = 2
9:5/0/terrains_peering_bit/top_side = 2
10:5/0 = 0
10:5/0/terrain_set = 0
10:5/0/terrain = 2
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 1
1:6/0/terrains_peering_bit/right_side = 1
1:6/0/terrains_peering_bit/bottom_side = 1
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 1
2:6/0/terrains_peering_bit/right_side = 1
2:6/0/terrains_peering_bit/left_side = 1
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 1
3:6/0/terrains_peering_bit/bottom_side = 1
3:6/0/terrains_peering_bit/left_side = 1
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/terrain = 1
4:6/0/terrains_peering_bit/right_side = 1
4:6/0/terrains_peering_bit/bottom_side = 1
4:6/0/terrains_peering_bit/top_side = 1
5:6/0 = 0
5:6/0/terrain_set = 0
5:6/0/terrain = 1
5:6/0/terrains_peering_bit/bottom_side = 1
5:6/0/terrains_peering_bit/left_side = 1
5:6/0/terrains_peering_bit/top_side = 1
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 1
1:7/0/terrains_peering_bit/bottom_side = 1
1:7/0/terrains_peering_bit/top_side = 1
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 1
2:7/0/terrains_peering_bit/right_side = 1
2:7/0/terrains_peering_bit/bottom_side = 1
2:7/0/terrains_peering_bit/left_side = 1
2:7/0/terrains_peering_bit/top_side = 1
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 1
3:7/0/terrains_peering_bit/bottom_side = 1
3:7/0/terrains_peering_bit/top_side = 1
4:7/0 = 0
4:7/0/terrain_set = 0
4:7/0/terrain = 1
4:7/0/terrains_peering_bit/right_side = 1
4:7/0/terrains_peering_bit/bottom_side = 1
4:7/0/terrains_peering_bit/left_side = 1
5:7/0 = 0
5:7/0/terrain_set = 0
5:7/0/terrain = 1
5:7/0/terrains_peering_bit/right_side = 1
5:7/0/terrains_peering_bit/left_side = 1
5:7/0/terrains_peering_bit/top_side = 1
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
1:8/0/terrain_set = 0
1:8/0/terrain = 1
1:8/0/terrains_peering_bit/right_side = 1
1:8/0/terrains_peering_bit/top_side = 1
2:8/0 = 0
2:8/0/terrain_set = 0
2:8/0/terrain = 1
2:8/0/terrains_peering_bit/right_side = 1
2:8/0/terrains_peering_bit/left_side = 1
3:8/0 = 0
3:8/0/terrain_set = 0
3:8/0/terrain = 1
3:8/0/terrains_peering_bit/left_side = 1
3:8/0/terrains_peering_bit/top_side = 1
4:8/0 = 0
4:8/0/terrain_set = 0
4:8/0/terrain = 1
4:8/0/terrains_peering_bit/bottom_side = 1
5:8/0 = 0
5:8/0/terrain_set = 0
5:8/0/terrain = 1
5:8/0/terrains_peering_bit/right_side = 1
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
2:9/0/terrain_set = 0
2:9/0/terrain = 0
2:9/0/terrains_peering_bit/right_side = 0
2:9/0/terrains_peering_bit/bottom_right_corner = 0
2:9/0/terrains_peering_bit/bottom_side = 0
2:9/0/terrains_peering_bit/bottom_left_corner = 0
2:9/0/terrains_peering_bit/left_side = 0
2:9/0/terrains_peering_bit/top_left_corner = 0
2:9/0/terrains_peering_bit/top_side = 0
2:9/0/terrains_peering_bit/top_right_corner = 0
3:9/0 = 0
3:9/0/terrain_set = 0
3:9/0/terrain = 1
4:9/0 = 0
4:9/0/terrain_set = 0
4:9/0/terrain = 1
4:9/0/terrains_peering_bit/top_side = 1
5:9/0 = 0
5:9/0/terrain_set = 0
5:9/0/terrain = 1
5:9/0/terrains_peering_bit/left_side = 1
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
8:9/0/terrain_set = 0
8:9/0/terrain = 2
8:9/0/terrains_peering_bit/right_side = 2
8:9/0/terrains_peering_bit/bottom_right_corner = 2
8:9/0/terrains_peering_bit/bottom_side = 2
8:9/0/terrains_peering_bit/bottom_left_corner = 2
8:9/0/terrains_peering_bit/left_side = 2
8:9/0/terrains_peering_bit/top_left_corner = 2
8:9/0/terrains_peering_bit/top_side = 2
8:9/0/terrains_peering_bit/top_right_corner = 2
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f7w3d"]
resource_name = "Environment_ext"
texture = ExtResource("2_umou2")
0:0/0 = 0
0:0/0/terrain_set = 0
1:0/0 = 0
1:0/0/terrain_set = 0
2:0/0 = 0
2:0/0/terrain_set = 0
3:0/0 = 0
3:0/0/terrain_set = 0
4:0/0 = 0
4:0/0/terrain_set = 0
0:1/0 = 0
0:1/0/terrain_set = 0
1:1/0 = 0
1:1/0/terrain_set = 0
2:1/0 = 0
2:1/0/terrain_set = 0
3:1/0 = 0
3:1/0/terrain_set = 0
4:1/0 = 0
4:1/0/terrain_set = 0
0:2/0 = 0
0:2/0/terrain_set = 0
1:2/0 = 0
1:2/0/terrain_set = 0
2:2/0 = 0
2:2/0/terrain_set = 0
3:2/0 = 0
3:2/0/terrain_set = 0
4:2/0 = 0
4:2/0/terrain_set = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/terrain_set = 0
4:3/0 = 0
4:3/0/terrain_set = 0

[sub_resource type="TileSet" id="TileSet_3l6d4"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Grass"
terrain_set_0/terrain_0/color = Color(0.286275, 0.431373, 0.215686, 1)
terrain_set_0/terrain_1/name = "Grass Path"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
terrain_set_0/terrain_2/name = "Dirt"
terrain_set_0/terrain_2/color = Color(0.266667, 0.14902, 0.0392157, 1)
sources/0 = SubResource("TileSetAtlasSource_xf7lh")
sources/1 = SubResource("TileSetAtlasSource_f7w3d")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_velus"]

[sub_resource type="LabelSettings" id="LabelSettings_byoym"]
outline_size = 10
outline_color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="TileMapGen" type="TileMap"]
tile_set = SubResource("TileSet_3l6d4")
format = 2
script = ExtResource("3_bw0ur")
map_noise = SubResource("FastNoiseLite_velus")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugUI" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 50.0

[node name="CurrSection" type="Label" parent="CanvasLayer/DebugUI"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_byoym")

[node name="LoadedSections" type="Label" parent="CanvasLayer/DebugUI"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_byoym")
